# OOP_FTI_TASKS

./: CMakeLists.txt  calculator.h  command.h  fileIO.h  main.cpp  sharedPtr.h  tests.cpp
Pattern/: CMakeLists.txt  consoleLogger.cpp  consoleLogger.h  logger.cpp  logger.h  loggerStrategy.h  main.cpp  output.txt  simpleFileLogger.cpp  simpleFileLogger.h  timedFileLogger.cpp  timedFileLogger.h
Pattern/tests/: tests.cpp
multiCalc/: CMakeLists.txt  README.md  calculator.h  command.h  fileIO.h  fileInfo.h  logfile.txt  main.cpp  result.h
multiCalc/tests/: CMakeLists.txt  tests.cpp
